allow jobs/list to return jobs of muliple types
