# airbyte-api/src/main/openapi/config.yaml
@@ -1744,8 +1744,10 @@ components:
         - configType
         - configId
       properties:
-        configType:
-          $ref: "#/components/schemas/JobConfigType"
+        configTypes:
+          type: array
+          items:
+            $ref: "#/components/schemas/JobConfigType"
         configId:
           type: string
     JobIdRequestBody:
